2005-12-14  Atsushi Enomoto <atsushi@ximian.com>

	* XPathEditableDocument.cs : added 2.0 SchemaInfo.

2005-12-13  Atsushi Enomoto  <atsushi@ximian.com>

	* XPathEditableDocument.cs : implement ReplaceSelf() here.

2005-12-13  Atsushi Enomoto  <atsushi@ximian.com>

	* XPathEditableDocument.cs :
	  - Now it does not append "written" nodes until Close() is invoked.
	  - Use XmlDocumentFragment to store incomplete tree fragment.
	  - Implemented DeleteRange() and ReplaceRange().
	  - Added "Closed" event for ReplaceRange() to "not remove until
	    Close() is called."

2005-12-13  Atsushi Enomoto  <atsushi@ximian.com>

	* XPathEditableDocument.cs :
	  - Removed almost all redundant code in XPathEditableDocument,
	    which is based on .net 1.2 XPathDocument functionality.
	  - It was always doing AppendChild even if the operation is
	    InsertBefore or InsertAfter.

2005-12-13  Atsushi Enomoto  <atsushi@ximian.com>

	* XPathEditableDocument.cs : 
	  XmlDocumentInsertionWriter.WriteFullEndElement() should set IsEmpty
	  of the element before pop.

2005-12-08  Atsushi Enomoto  <atsushi@ximian.com>

	* XPathDocument2.cs, XPathDocument2Editable.cs,
	  XPathDocument2Navigator.cs : garbage cleanup.

2005-08-05  Atsushi Enomoto  <atsushi@ximian.com>

	* Pattern.cs, IdPattern.cs, LocationPathPattern.cs, UnionPattern.cs :
	  added bool EvaluatedNodeType property (used in XslKeyTable).

2005-05-05  Atsushi Enomoto  <atsushi@ximian.com>

	* XPathEditableDocument.cs : sync with updated 2.0 API.

2005-03-22  Atsushi Enomoto  <atsushi@ximian.com>

	* DTMXPathDocumentWriter2.cs : use index for string pool.

2005-03-22  Atsushi Enomoto  <atsushi@ximian.com>

	* IdPattern.cs, LocationPathPattern.cs :
	  Use XsltCompiledContext.GetNavCache() that returns reusable
	  navigator cache for each pattern, to avoid Clone() and not to leave
	  reference to already-done instance navigator.

2004-03-22  Atsushi Enomoto  <atsushi@ximian.com>
