@@ -1,3 +1,7 @@
+2005-12-14  Atsushi Enomoto <atsushi@ximian.com>
+
+	* XPathNavigator.cs : UnderlyingObject returns null by default.
+
 2005-12-13  Atsushi Enomoto <atsushi@ximian.com>
 
 	* XPathNavigator.cs : Reimplemented MoveToFollowing() to avoid
